--- a/src/layout/accountLayout.styles.scss
+++ b/src/layout/accountLayout.styles.scss
@@ -31,7 +31,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: center;
+    margin-top: 10%;
     gap: 4px;
   }
 
