--- a/src/pages/SingleProductPage.styles.scss
+++ b/src/pages/SingleProductPage.styles.scss
@@ -19,7 +19,7 @@
     gap: 8px;
   }
 
-  .single-product-header {
+  .single-product-heading {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
