--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -37,6 +37,10 @@
   width: 100%;
 }
 
+.products-heading {
+  font-size: inherit;
+}
+
 .product-toolbar {
   display: flex;
   justify-content: space-between;
