--- a/src/features/shop/components/filterPanel.styles.scss
+++ b/src/features/shop/components/filterPanel.styles.scss
@@ -6,6 +6,10 @@
     width: 100%;
   }
 
+  .filter-panel-heading {
+    margin-bottom: 4px;
+  }
+
   .filter-panel-content {
     flex-grow: 1;
   }
