--- a/src/pages/account/_my-account.scss
+++ b/src/pages/account/_my-account.scss
@@ -30,7 +30,7 @@
 }
 
 .my-address-item {
-  border: 1px solid #d9d6d6;
+  border: 1px solid $color-gray-40;
   display: grid;
   grid-row: span 2;
 
