--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -1,5 +1,53 @@
 @use '../../../scss/globals' as *;
 
+.product-card-lists {
+  @include grid-template-column;
+
+  .product-card-item {
+    position: relative;
+  }
+
+  .badge,
+  .favorite-heart {
+    position: absolute;
+    z-index: 1;
+    right: 4px;
+    top: 12px;
+  }
+
+  .badge {
+    left: 12px;
+  }
+
+  .size-overlays {
+    gap: 30px;
+    display: flex;
+    background-color: rgb($color-white, 80%);
+    padding: 12px 4px;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .card-img-container {
+    aspect-ratio: 3 / 5; // eller 4/5 hvis du vil have dem lidt højere
+    width: 100%;
+    overflow: hidden; // clip er fint, men hidden er mere udbredt og stabilt
+    position: relative; // keeps overlays placed correctly
+  }
+
+  .card-img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; // sørger for stabil højde
+  }
+
+  img {
+    border-radius: 0;
+  }
+}
+
 .size-overlay {
   gap: 30px;
   display: flex;
