--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -3,53 +3,6 @@
 .product-card-list {
   @include grid-template-column;
 
-  &.list {
-    grid-template-columns: 1fr !important;
-    row-gap: 2rem;
-
-    .product-card {
-      gap: 20px;
-      display: grid;
-      grid-template-columns: repeat(
-        auto-fill,
-        minmax(min(100%, 23.875rem), 1fr)
-      );
-    }
-
-    .card-img-container {
-      aspect-ratio: 3 / 2;
-    }
-  }
-
-  .product-card-item {
-    position: relative;
-  }
-
-  .badge,
-  .favorite-heart {
-    position: absolute;
-    z-index: 1;
-    right: 4px;
-    top: 12px;
-  }
-
-  .badge {
-    left: 12px;
-  }
-
-  .size-overlay {
-    gap: 30px;
-    display: flex;
-    background-color: rgb($color-white, 80%);
-    padding: 12px 4px;
-    justify-content: center;
-    position: absolute;
-    transform: translateY(0);
-    width: 100%;
-
-    @include transition($what: transform);
-  }
-
   .card-img-container {
     aspect-ratio: 3 / 5;
     width: 100%;
@@ -61,6 +14,50 @@
       height: 100%;
       border-radius: 0;
       object-fit: cover;
+    }
+  }
+
+  &.list {
+    grid-template-columns: 1fr;
+    row-gap: 16px;
+
+    .product-card-link {
+      gap: 20px;
+
+      @include grid-template-column(380px);
+    }
+
+    .card-img-container {
+      aspect-ratio: 3 / 2;
+    }
+  }
+
+  .product-card {
+    position: relative;
+
+    .badge,
+    .favorite-heart {
+      position: absolute;
+      z-index: 1;
+      right: 4px;
+      top: 12px;
+    }
+
+    .badge {
+      left: 12px;
+    }
+
+    .size-overlay {
+      gap: 30px;
+      display: flex;
+      background-color: rgb($color-white, 80%);
+      padding: 12px 4px;
+      justify-content: center;
+      position: absolute;
+      transform: translateY(0);
+      width: 100%;
+
+      @include transition($what: transform);
     }
   }
 }
