--- a/src/features/currency/components/_product-price.scss
+++ b/src/features/currency/components/_product-price.scss
@@ -7,6 +7,7 @@
   font-family: $font-primary-bold;
   font-size: $font-medium;
   color: $color-primary;
+  margin: 0;
 
   .text-line-through {
     font-size: $font-mini;
