--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -6,15 +6,15 @@ $placement-y: 8px;
   @include grid-template-column;
 
   .product-card {
+    p {
+      margin: 0;
+    }
+
     .product-card-content {
       display: flex;
       flex-direction: column;
       gap: 4px;
       margin-block: 8px 16px;
-
-      p {
-        margin: 0;
-      }
 
       .product-card-title {
         font-family: $font-primary-bold;
@@ -22,6 +22,12 @@ $placement-y: 8px;
         text-transform: uppercase;
       }
     }
+  }
+
+  .product-card-info {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
 
   .favorites-label {
