--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -56,6 +56,9 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
+  border-top: 1px solid $color-border;
+  padding-block: 20px 32px;
+  margin-top: 20px;
 
   .product-navigation-form {
     max-width: rem(100px);
