--- a/src/features/shop/components/productLists/_product-list.scss
+++ b/src/features/shop/components/productLists/_product-list.scss
@@ -1,9 +1,13 @@
-@use '../../scss/globals' as *;
+@use '../../../../scss/globals' as *;
 
 .product-list {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+
+  .additional-colors-badge {
+    line-height: rem(12px);
+  }
 
   &.color-list {
     gap: 4px;
