--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -106,6 +106,10 @@ $placement-x: 12px;
       align-items: center;
 
       @include grid-template-column;
+
+      .product-card-info {
+        gap: 12px;
+      }
     }
 
     .card-img-container {
