--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -99,8 +99,11 @@ a {
 
 img {
   max-width: 100%;
+  width: 100%;
   border-radius: 4px;
   display: block;
+  height: auto;
+  object-fit: cover;
 }
 
 ul {
