--- a/src/pages/rangeSlider/_range-slider.scss
+++ b/src/pages/rangeSlider/_range-slider.scss
@@ -1,47 +1,82 @@
-@use '../../scss/globals' as *;
+$thumb-size: 16px;
 
-@mixin thumb-style {
-  width: 1rem;
-  height: 1rem;
-  background: $color-primary;
-}
-
-@mixin track-style {
-  background: #ddd;
-  height: 8px;
-  border-radius: 8px;
-}
-
-input[type='range'] {
+@mixin track-styles {
   appearance: none;
-  width: 100%;
-  height: 8px;
   background: transparent;
-  cursor: grabbing;
-  accent-color: $color-primary;
+  border: transparent;
 }
 
-// Track - WebKit
-input[type='range']::-webkit-slider-runnable-track {
-  @include track-style;
-}
-
-// Track - Firefox
-input[type='range']::-moz-range-track {
-  @include track-style;
-}
-
-// Thumb - WebKit
-input[type='range']::-webkit-slider-thumb {
+@mixin thumb-styles {
   appearance: none;
-  margin-top: -4px;
+  pointer-events: all;
+  width: $thumb-size;
+  height: $thumb-size;
+  border-radius: 0;
+  border: 0 none;
+  cursor: grab;
+  background-color: red;
 
-  @include thumb-style;
+  &:active {
+    cursor: grabbing;
+  }
 }
 
-// Thumb - Firefox
-input[type='range']::-moz-range-thumb {
-  @include thumb-style;
+.wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 40px calc(#{$thumb-size} / 2);
+  padding-top: 1.6rem;
+  height: calc(#{$thumb-size} + 1.6rem);
+}
+
+.input-wrapper {
+  width: calc(100% + #{$thumb-size});
+  margin: 0 calc(#{$thumb-size} / -2);
+  position: absolute;
+  height: $thumb-size;
+}
+
+.control-wrapper {
+  width: 100%;
+  position: absolute;
+  height: $thumb-size;
+}
+
+.input {
+  position: absolute;
+  width: 100%;
+  min-height: auto;
+  pointer-events: none;
+  appearance: none;
+  height: 100%;
+  opacity: 0;
+  z-index: 3;
+  padding: 0;
+
+  &::-ms-track {
+    @include track-styles;
+  }
+
+  &::-moz-range-track {
+    @include track-styles;
+  }
+
+  &:focus::-webkit-slider-runnable-track {
+    @include track-styles;
+  }
+
+  &::-ms-thumb {
+    @include thumb-styles;
+  }
+
+  &::-moz-range-thumb {
+    @include thumb-styles;
+  }
+
+  &::-webkit-slider-thumb {
+    @include thumb-styles;
+  }
 }
 
 .rail {
@@ -57,10 +92,18 @@ input[type='range']::-moz-range-thumb {
 .inner-rail {
   position: absolute;
   height: 100%;
-  background: $color-primary;
+  background: hotpink;
   opacity: 0.5;
 }
 
-.input-wrapper {
-  width: 100%;
+.control {
+  width: $thumb-size;
+  height: $thumb-size;
+  border-radius: 50%;
+  position: absolute;
+  background: hotpink;
+  top: 50%;
+  margin-left: calc(#{$thumb-size} / -2);
+  transform: translate3d(0, -50%, 0);
+  z-index: 2;
 }
