--- a/src/pages/rangeSlider/_range-slider.scss
+++ b/src/pages/rangeSlider/_range-slider.scss
@@ -1,10 +1,10 @@
 @use '../../scss/globals' as *;
 
-$thumb-size: 16px;
+$thumb-size: rem(16px);
 
 @mixin track-styles {
   appearance: none;
-  background: transparent;
+  background-color: transparent;
   border: transparent;
 }
 
@@ -16,7 +16,6 @@ $thumb-size: 16px;
   border-radius: 0;
   border: 0 none;
   cursor: grab;
-  background-color: red;
 
   &:active {
     cursor: grabbing;
@@ -28,7 +27,6 @@ $thumb-size: 16px;
   display: flex;
   align-items: center;
   margin: 40px calc(#{$thumb-size} / 2);
-  padding-top: 1.6rem;
   height: calc(#{$thumb-size} + 1.6rem);
 
   &:has(.range-start:focus-visible) .control-start,
@@ -91,24 +89,23 @@ $thumb-size: 16px;
   width: 100%;
   top: 50%;
   transform: translateY(-50%);
-  height: 6px;
-  border-radius: 3px;
-  background: lightgrey;
+  height: 4px;
+  border-radius: 4px;
+  background-color: $color-primary;
 }
 
 .inner-rail {
   position: absolute;
   height: 100%;
-  background: hotpink;
-  opacity: 0.5;
+  min-height: 6px;
+  background-color: $color-primary;
 }
 
 .control {
   width: $thumb-size;
   height: $thumb-size;
-  border-radius: 50%;
   position: absolute;
-  background: hotpink;
+  background-color: $color-primary;
   top: 50%;
   margin-left: calc(#{$thumb-size} / -2);
   transform: translate3d(0, -50%, 0);
