--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -23,7 +23,7 @@ a[class^='btn-'],
   padding: 16px;
   border-radius: 4px;
   width: 100%;
-  border: none;
+  border: 0;
   cursor: pointer;
   min-height: rem(60px);
   letter-spacing: rem(0.5px);
