--- a/src/components/favorites/_favorites-heart.scss
+++ b/src/components/favorites/_favorites-heart.scss
@@ -22,7 +22,7 @@
   .heart-icon {
     font-size: rem(16px);
     background: none;
-    border: none;
+    border: 0;
     cursor: pointer;
 
     &.animate {
