--- a/src/components/formElements/rangeInput/_range.scss
+++ b/src/components/formElements/rangeInput/_range.scss
@@ -63,6 +63,7 @@ $focus-ring: 0 0 0 3px rgb(0 123 255 / 25%);
   background: linear-gradient(90deg, $blue-dark, $blue);
 }
 
+.range-slider,
 .price-slider {
   position: absolute;
   width: 100%;
