--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -15,6 +15,32 @@
   align-items: center;
   width: 100%;
   max-width: $page-width-large;
+
+  .page-card {
+    max-height: 78lvh;
+    overflow: auto;
+    overflow-x: clip;
+    background-color: $color-white;
+    border-radius: 4px;
+    box-shadow: $box-shadow;
+    width: 100%;
+    padding: 24px;
+
+    @include max-size($medium) {
+      max-height: 100%;
+      padding: 12px;
+    }
+  }
+
+  .label-value-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    .text {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
 }
 
 .admin-container {
