--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -57,3 +57,13 @@
     @extend %stacked-item-border;
   }
 }
+
+.label-value-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  .text {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
