--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -59,6 +59,12 @@ $animation-timing-function: ease-in-out;
   grid-template-columns: repeat(auto-fill, minmax(min(100%, $size), 1fr));
 }
 
+@mixin grid-fixed-columns($columns: 2, $gap: 12px) {
+  display: grid;
+  gap: $gap;
+  grid-template-columns: repeat($columns, 1fr);
+}
+
 @mixin set-grid-size($size) {
   @if math.is-unitless($size) or math.unit($size) == 'px' {
     $size: rem($size);
