--- a/src/features/currency/components/_product-price.scss
+++ b/src/features/currency/components/_product-price.scss
@@ -1,5 +1,23 @@
 @use '../../../scss/globals' as *;
 
+.price {
+  font-family: $font-primary-bold;
+
+  .discount-price {
+    color: $color-red-15;
+  }
+
+  .orginal-price {
+    text-decoration: line-through;
+    font-size: $font-mini;
+  }
+
+  .price-seperator {
+    font-size: $font-small;
+    padding-inline: 4px;
+  }
+}
+
 .product-discont-price {
   display: flex;
   gap: 4px;
