--- a/src/features/currency/components/productPrice/_product-price.scss
+++ b/src/features/currency/components/productPrice/_product-price.scss
@@ -1,6 +1,6 @@
-@use '../../../scss/globals' as *;
+@use '../../../../scss/globals' as *;
 
-.price {
+.product-price {
   font-family: $font-primary-bold;
 
   .discount-price {
